Make edits to hw6